Fixing button css on home page on smaller screens.

--- a/src/static/home/io.css
+++ b/src/static/home/io.css
@@ -18,7 +18,6 @@
   background-color: #020713;
   border: 1px solid #001133;
   color: white;
-  height: 30px;
 }
 
 .operational-btns:active {
@@ -54,29 +53,11 @@
 }
 
 .io-fieldset-cell {
-  margin-top: 3px;
+  margin: 3px;
 }
 
 .io-fieldset-input {
   border-radius: 5px;
-}
-
-.btn-group {
-  margin: auto 10px;
-}
-
-.btn-group input {
-  float: left;
-}
-
-.btn-left {
-  border-radius: 10px 0 0 10px;
-  border-right: 0;
-}
-
-.btn-right {
-  border-radius: 0 10px 10px 0;
-  border-left: 1px solid #000;
 }
 
 .dropdown {
